2001-12-17  Bruno Haible  <bruno@clisp.org>

	* msgexec-2: Don't use 'tr'. It is broken on Solaris.
	* mex-test2.ok: New file.
	* Makefile.am (EXTRA_DIST): Add it.

2001-12-15  Bruno Haible  <bruno@clisp.org>

	* msgfmt-7: Write "8bit", not "8-bit".
	* msgfmt-8: Likewise.
	* msgfmt-9: Likewise.
	* msguniq-a.in: Likewise.
	* msguniq-a.out: Likewise.
	* msguniq-2: Likewise.
	* msguniq-3: Likewise.

2001-12-15  Bruno Haible  <bruno@clisp.org>

	* plural-1: Adapt for changed xgettext behaviour w.r.t. format strings
	in plural forms.
	* lang-c: Likewise.
	* lang-c++: Likewise.
	* lang-objc: Likewise.
	* lang-clisp: Likewise.
	* lang-java: Likewise.
	* lang-ycp: Likewise.
	* lang-po: Likewise.

2001-12-15  Bruno Haible  <bruno@clisp.org>

	* msgfmt-1: Remove temporary files in case of error.
	* msgfmt-2: Likewise.

2001-12-15  Bruno Haible  <bruno@clisp.org>

	* msgfmt-10: New file.
	* Makefile.am (TESTS): Add it.

2001-12-11  Bruno Haible  <bruno@clisp.org>

	* lang-c++: Don't use ostream::form, it's a g++ 2.x extension not
	present in ISO C++ or g++ 3.x.
	* lang-objc: Drop error messages that can result from attempting to
	compile an ObjectiveC program.
	* lang-java: Set the default locale by hand. Some systems, like
	Solaris, are not capable of setting the locale according to LC_ALL
	by themselves.
	* lang-rst: Avoid using the 'type' builtin. It always reports success
	with SunOS4 /bin/sh.
	* lang-pascal: Likewise.

2001-12-11  Bruno Haible  <bruno@clisp.org>

	* lang-objc: If the locale couldn't be set, exit with code 77, not 1.

2001-12-09  Bruno Haible  <bruno@clisp.org>

	* lang-clisp: New file.
	* Makefile.am (TESTS): Add it.
	* format-lisp-1: Use real Lisp syntax.

2001-12-08  Bruno Haible  <bruno@clisp.org>

	* msgattrib-1: New file.
	* msgattrib-2: New file.
	* msgattrib-3: New file.
	* msgattrib-4: New file.
	* msgattrib-5: New file.
	* msgattrib-6: New file.
	* msgattrib-7: New file.
	* msgattrib-8: New file.
	* msgattrib-9: New file.